# locic-

./: .gitignore  AGENTS.md  Automated Testing.py  Implement guardrails.py  Memory System.py  README.md  Screenshot of wealth goal running  The Code Generation Tool  The Consolidated Pipeline.py  The Orchestrator.py  The Refinement Engine.py  VirtualMemoryStore.py  WorkflowOrchestratorv2.py  brain.py  chatbot.py  config.yaml  data collector logic  display code.py  encapsulate tool.py  logging.py  memory model.py  pipline  pyproject.toml  run.py  storage model.py  strong ani deft  subroot core.txt  subroot master.txt  v2 WorkflowOrchestrator  wealth_goal_calculator.py.tsx
src/: __init__.py
src/core/: __init__.py  refinement.py  workflow.py
src/tools/: __init__.py  code_gen.py  code_reviewer.py  refinement_engine.py
